zebra-rpc/src/methods/tests/snapshots/get_address_tx_ids_valid_single_block@mainnet_10.snap
---
source: zebra-rpc/src/methods/tests/snapshot.rs
expression: transactions
---
[
  "8974d08d1c5f9c860d8b629d582a56659a4a1dcb2b5f98a25a5afcc2a784b0f4"
]
