zebra-rpc/src/methods/tests/snapshots/get_address_tx_ids_valid_single_block@testnet_10.snap
---
source: zebra-rpc/src/methods/tests/snapshot.rs
expression: transactions
---
[
  "5822c0532da8a008259ac39933d3210e508c17e3ba21d2b2c428785efdccb3d5"
]
