zebra-rpc/src/methods/tests/snapshots/get_asset_state@mainnet.snap
---
source: zebra-rpc/src/methods/tests/snapshot.rs
expression: asset_state
---
{
  "is_finalized": true,
  "total_supply": 1000,
  "reference_note": "cc36601959213b6b0cdb96a75c17c3a668a97f0d6a8c5ce164a518ea9ba9a50ea75191fd861b0ff10e62b000000000000000000000000000000000000000000000000000000000000000000000000000000000b2f7f581d6de3c06a822fd6e7e8265fbc00f8401696a5bdc34f5a6d2ff3f922f"
}
