zebra-rpc/src/methods/tests/snapshots/get_asset_state_invalid_asset_base@mainnet.snap
---
source: zebra-rpc/src/methods/tests/snapshot.rs
assertion_line: 732
expression: invalid_asset_base
---
{
  "code": -8,
  "message": "invalid asset base"
}
