zebra-rpc/src/methods/tests/snapshots/get_asset_state_invalid_hex@testnet.snap
---
source: zebra-rpc/src/methods/tests/snapshot.rs
assertion_line: 720
expression: invalid_hex
---
{
  "code": -8,
  "message": "invalid hex encoding: Invalid character 'z' at position 0"
}
