zebra-rpc/src/methods/tests/snapshots/get_asset_state_not_found@mainnet.snap
---
source: zebra-rpc/src/methods/tests/snapshot.rs
assertion_line: 711
expression: asset_state
---
{
  "code": -1,
  "message": "asset base not found"
}
