zebra-rpc/src/methods/tests/snapshots/get_asset_state_not_found@testnet.snap
---
source: zebra-rpc/src/methods/tests/snapshot.rs
expression: asset_state
---
{
  "code": 0,
  "message": "asset base not found"
}
